--- a/nfc_ble_komunikacija/prj.conf
+++ b/nfc_ble_komunikacija/prj.conf
@@ -12,14 +12,18 @@ CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_NVS=y
 
 CONFIG_REBOOT=y
-CONFIG_DK_LIBRARY=y
-
-CONFIG_NFC_T2T_NRFXLIB=y
-
+CONFIG_FLASH=y
 CONFIG_NFC_NDEF=y
 CONFIG_NFC_NDEF_MSG=y
 CONFIG_NFC_NDEF_RECORD=y
 CONFIG_NFC_NDEF_TEXT_RECORD=y
+CONFIG_BT_DEVICE_NAME="Nordic_nRF52840"
+CONFIG_BT=y
+
+CONFIG_DK_LIBRARY=y
+
+CONFIG_NFC_T2T_NRFXLIB=y
+
 
 CONFIG_NFC_NDEF_URI_REC=y
 CONFIG_NFC_NDEF_URI_MSG=y
@@ -30,8 +34,6 @@ CONFIG_CONSOLE_GETCHAR=y
 
 CONFIG_BT_CTLR_SDC_LLPM=y
 
-CONFIG_BT_DEVICE_NAME="Nordic_nRF52840"
-CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_PERIPHERAL=y
